# trustee

./: .gitignore  .gitmodules  .ocamlformat  .rustfmt.toml  Cargo.toml  Makefile  README.md  article.html  build_proofs.sh  cli.sh  dune-project  lsp-lwt.opam  parse_ot.sh  run.sh  run_server.sh  script1.sh  trustee-itp.opam  trustee-lsp.opam  trustee-opentheory.opam  trustee-script-jupyter.opam  trustee-script.opam  trustee.opam  trustee_lsp  trustee_ot.sh  vm_check.sh  vm_repl.sh
.github/workflows/: build.yml  main.yml  ml.yml  rust.yml
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml
core/src/: algo.rs  error.rs  kernel_of_trust.rs  lib.rs  meta.rs  position.rs  prelude.trustee  rptr.rs  rstr.rs  syntax.rs  tef.rs
core/src/ocaml/: trustee.opam
core/src/ocaml/src/: dune  lib.rs  trustee.ml
data/: kernel.json  shard.yml
data/src/: opentheory-dl.cr
examples/: cli.rs  dune  parse_ot.rs  playground.trustee  prelude_hol.parsed.expected  prelude_hol.tprf  prelude_hol.trustee
jupyter/: Cargo.toml  Makefile
jupyter-kernel/: Makefile
jupyter-kernel/src/: core.rs  install.rs  jupyter_message.rs  lib.rs
jupyter/src/: main.rs
lsp/: Cargo.toml
lsp/src/: main.rs  server.rs  utils.rs
ml/: Makefile  trustee-lsp.opam  trustee.opam  trustee_tk.sh
ml/data/vim/ftdetect/: tprf.vim
ml/data/vim/syntax/: tprf.vim
ml/examples/: prelude_hol.tprf
ml/src/core/: ID.ml  dune  fixity.mli  kernel.ml  kernel.mli  loc.ml  loc.mli  location.ml  location.mli  log.ml  log.mli  parse_ast.ml  parse_ast.mli  parse_expr.ml  parse_expr.mli  parse_sexp.ml  parse_sexp.mli  parser_comb.ml  parser_comb.mli  position.ml  position.mli  proof.ml  rule.ml  rule.mli  sigs.ml  syntax.ml  syntax.mli  trustee_core.ml  type_ast.ml  type_ast.mli
ml/src/lsp/: dune  jsonrpc2.ml  jsonrpc2.mli  lsp_server.ml  task.mli  trustee_lsp.ml
ml/src/tools/: dune  trustee_tk.ml
ml/tests/: dune
ml/tests/core/: dune  run_tests.ml  test_help.ml  test_syntax.ml
ocaml/: Cargo.toml  Makefile
ocaml/examples/: dune  load_ot.ml
ocaml/src/: lib.rs  trustee.ml
opentheory/: Cargo.toml
opentheory/examples/: parse_ot.rs
opentheory/src/: lib.rs
rust-old/: Cargo.toml  Makefile
rust-old/cli/: Cargo.toml  README.md
rust-old/core/: Cargo.toml
rust-old/jupyter/: Cargo.toml
rust-old/jupyter-kernel/: Cargo.toml  README.md  TODO.md
rust-old/jupyter-kernel/src/: control_file.rs  core.rs
rust-old/lsp/: Cargo.toml  Makefile
rust-old/lsp/src/: main.rs  server.rs
rust-old/opentheory/: README.md
rust-old/trustee_utils/: Cargo.toml
rust-old/trustee_utils/src/: lib.rs
src/: Hashcons.ml  algo.rs  core.ml  database.rs  dune  expr.rs  fnv.rs  kernel_of_trust.ml  kernel_of_trust.rs  lib.rs  main.rs  meta.rs  open_theory.rs  prelude.trustee  resp3.rs  rewrite.rs  syntax.rs  thm.rs  tier1.ml  tier1.mli  trustee.ml  utils.rs
src/algos/: Sym_ptr.ml  Sym_ptr.mli  congruence_closure.ml  congruence_closure.mli  dune  unif.ml
src/cli/: dune  trustee_cli.ml
src/core/: Bool.ml  Bool.mli  Cname.ml  Cname.mli  Core.ml  Core.mli  Error.ml  Error.mli  Goal.ml  Goal.mli  ID.mli  KBO.ml  KBO.mli  Kernel_of_trust.ml  LRU.ml  Open_theory.ml  Open_theory.mli  Statement.ml  Statement.mli  Sym_ptr.ml  Sym_ptr.mli  Tactic.ml  Tactic.mli  Tier1.ml  Trustee.ml  VM.ml  VM.mli  VM_lex.mll  VM_parser.ml  VM_parser.mli  Vec.ml  Vec.mli  Xdg.ml  cbor_pack.ml  cbor_pack.mli  chash.ml  chash.mli  cname.ml  cname.mli  congruence_closure.ml  (+52 more)
src/core/tests/: dune  t1.expected  t1.ml  t1.trll  t1.trll.expected  t1.trvm  t2.trll  t2.trll.expected  t2.trvm
src/core/tools/: dune  mkinstr.ml  readline.basic.ml  readline.linenoise.ml  readline.mli  vm_check.ml  vm_repl.ml
src/interactive/: .Parser.ml.old  Goal.ml  Goal.mli  Lexer.mll  Parse.ml  Parse.mli  Parser.mly  Statement.ml  Statement.mli  Tactic.ml  Tactic.mli  dune
src/itp/: VM.ml  VM.mli  Xdg.ml  dune  loc_utils.ml  loc_utils.ml.tmp  loc_utils.mli.tmp  lock.ml  lock.mli  logger.ml  logger.mli  trustee_itp.ml
src/itp/tools/: dune
src/kernel/: Trustee_kernel.ml  dune
src/kot/: Trustee_kot.ml
src/loc/: Trustee_loc.ml  common_.ml  dune  line_index.ml  line_index.mli  loc.ml  loc.mli  loc_input.ml  loc_input.mli  local_loc.ml  local_loc.mli  position.ml  position.mli  with_loc.ml
src/lsp/: dune  jsonrpc2.ml  lsp_server.ml  task.ml  trustee_lsp.ml
src/lsp-lwt/: dune
src/minidag/: decode.ml  dune  encode.ml
src/opentheory/: OT_parser.ml  OT_parser.mli  OT_thy.ml  OT_thy.mli  VM.ml  VM.mli  article.ml  article.mli  common_.ml  dune  eval.ml  eval.mli  idx.ml  idx.mli  interp_file.ml  interp_file.mli  logger.ml  logger.mli  name.ml  name.mli  proof_zip.ml  proof_zip.mli  thy_file.ml  thy_file.mli  trustee_opentheory.ml  util.ml
src/opentheory/tool/: check_all.ml  dune  main.css  proof.js  render.ml  render.mli  serve.ml  serve.mli  st.ml  tooltip.js  trustee_ot.ml
src/py/: Cargo.toml  Makefile  test1.py
src/py/src/: lib.rs
src/script/: ast.ml  compile.ml  compile.mli  dune  error.ml  p_lex.mll  p_parse.mly  p_token.ml  p_token.mly  trustee_script.ml
src/script-jupyter/: dune  trustee_script_jupyter.ml
src/script/tests/: dune  t1.expected  t1.ml  t2.expected  t2.ml  t3.expected  t3.ml
src/sqlite/: dune  trustee_sqlite.ml  trustee_sqlite.mli
src/syn/: Lexer.mll  Parse.ml  Parse.mli  Parser.mly  Tokens.mly  dune
src/syntax/: ID.ml  ID.mli  Sexp_decode.ml  Sexp_decode.mli  Sexp_loc.ml  Sexp_loc.mli  common_.ml  dune  env.ml  env.mli  error.ml  error.mli  error_set.ml  expr_parser.ml  expr_parser.mli  expr_printer.ml  fixity.ml  fixity.mli  index.ml  lexer.ml  (+25 more)
tests/: core.ml  core.mli  dune  test_kernel_of_trust.rs  test_preamble.ml.txt  test_resp3.rs
tests/algos/: dune  helpers.ml  test_cc.ml  test_kbo.ml  test_kernel.ml  test_rw.ml  test_unif.ml
tests/core/: dune  helpers.ml  run_tests.ml  test_cc.ml  test_kbo.ml  test_kernel.ml  test_rw.408.ml  test_rw.ml  test_unif.ml
tests/integration/syntax/: bad.parsed.expected  bad.trustee  basic_hol.parsed.expected  basic_hol.trustee  dune
tests/syntax/: dune  run_tests.ml  test_syntax.ml
(+88 files in other folders)
