[package]
name = "trustee"
version = "0.1.0"
authors = ["Simon Cruanes <simon.cruanes.2007@m4x.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
log = "*"
env_logger = { version= "*", default-features=false, features=["termcolor", "atty"] }
anyhow="1.0"
pico-args="0.3"
rustyline = "6.0"

[[example]]
name = "parse_ot"
[[example]]
name = "cli"
