[package]
name = "trustee_cli"
version = "0.1.0"
authors = ["Simon Cruanes <simon.cruanes.2007@m4x.org>"]
edition = "2018"
default-run="trustee_cli"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
trustee = {path="../core", features=["logging"]}
log = "0.4"
env_logger = { version= "0.7", default-features=false, features=["termcolor", "atty"] }
anyhow="1.0"
pico-args="0.3"
rustyline = "6.0"
rlua = "*"
