[package]
name = "trustee_jupyter"
version = "0.1.0"
authors = ["Simon Cruanes <simon.cruanes.2007@m4x.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
trustee = {path="../core", features=["logging"]}
log = "0.4"
simplelog = "0.7.4"
anyhow="1.0"
jupyter_kernel = {version="*", git="https://github.com/c-cube/jupyter-kernel-rs"}
