[package]
name = "trustee_lsp"
version = "0.1.0"
authors = ["Simon Cruanes <simon.cruanes.2007@m4x.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
trustee = {path="../core"}
lsp-types="0.79"
anyhow="1.0"
log="0.4"
serde_json="1.0"
serde="1.0"
env_logger = { version= "*", default-features=false, features=["termcolor", "atty"] }
