[package]
name = "trustee-stubs"
version = "0.1.0"
authors = ["Simon Cruanes <simon.cruanes.2007@m4x.org>"]
edition = "2018"
[lib]
crate-type = ["staticlib", "cdylib"]


[dependencies]
trustee = {git = "https://github.com/c-cube/trustee.git", features=["arc"], version = "*"}
trustee_opentheory = {git = "https://github.com/c-cube/trustee.git", version = "*"}
ocaml = "^0.14.0"

[workspace]
