[package]
name = "trustee_opentheory"
version = "0.1.0"
authors = ["Simon Cruanes <simon.cruanes.2007@m4x.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
trustee = {path = "../core", features=["logging"]}

[dev-dependencies]
log = "0.4"
env_logger = {version="0.7", default-features=false, features=["termcolor", "atty"]}
gumdrop="0.6"

[[example]]
name = "parse_ot"
