
(executable
  (name run_qtest)
  (modes native)
  (modules run_qtest)
  (flags :standard  -w -a -warn-error -a+8)
  (libraries qcheck trustee.core))

(rule
  (targets run_qtest.ml)
  (deps (:files (glob_files "../src/core/*.ml")) (:preamble test_preamble.ml.txt))
  (mode fallback)
  (action (run qtest extract --preamble-file %{preamble} %{files} -o %{targets})))

(rule
 (alias    runtest)
 (package trustee)
 (locks /test)
 (action  (run ./run_qtest.exe)))

