
(executable
  (name run_qtest)
  (modes native)
  (modules run_qtest)
  (flags :standard  -w -a -warn-error -a+8)
  (libraries qcheck trustee.core))

(rule
  (targets run_qtest.ml)
  (deps (glob_files "../src/core/*.ml")) ; (glob_files ../src/**/*.ml{,i})))
  (mode fallback)
  (action (run qtest extract --preamble "open Trustee_core;;" %{deps} -o %{targets})))

(rule
 (alias    runtest)
 (action  (run ./run_qtest.exe)))

