[package]
name = "jupyter_kernel"
version = "0.0.1"
license = "Apache-2.0"
description = "A rust library to make Jupyter Kernels"
#repository = "https://github.com/google/evcxr"
readme = "README.md"
authors = [
    "David Lattimore <dvdlttmr@gmail.com>",
    "David Bernard <david.bernard.31@gmail.com>",
]
edition = "2018"

[dependencies]
anyhow = "1.0"
json = "0.11.15"
zmq = { version = "0.9.1", default-features = false }
uuid = { version = "0.7.4", features = [ "v4" ] }
hex = "0.3.2"
dirs = "2.0.2"
hmac = "0.7"
sha2 = "0.8.2"
chrono = { version="0.4.7", default-features=false, features=["clock"] }
log = "0.4"

[features]
default = ["vendored-zmq"]
vendored-zmq = ["zmq/vendored"]
