
[package]
name = "trustee_utils"
version = "0.1.0"
authors = ["Simon Cruanes <simon.cruanes.2007@m4x.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
trustee = {path="../core", features=["logging"]}
log = "0.4"
anyhow="1.0"
