[package]
name = "trustee_py"
version = "0.1.0"
authors = ["Simon Cruanes <simon.cruanes.2007@m4x.org>"]
edition = "2018"

[lib]

crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

trustee = {version="*", path="../.."}
cpython = {version="0.5", features=["extension-module"]}
