
(library
  (name trustee_script)
  (public_name trustee-script)
  (libraries trustee.core trustee.loc
             containers ppx_deriving.runtime)
  (preprocess (pps ppx_deriving.std))
  (flags :standard -open Trustee_core.Sigs -open Trustee_loc))

(menhir (modules p_token) (flags --only-tokens))
(menhir (modules p_parse p_token)
         (merge_into p_parse)
         (flags --external-tokens P_token --explain))
(ocamllex (modules p_lex))
