
(library
  (name trustee_syn)
  (optional)
  (public_name trustee.syn)
  (synopsis "basic parser for trustee")
  (libraries containers trustee.kot trustee))

(ocamllex (modules Lexer))

(menhir
  (modules Tokens)
  (flags --only-tokens))

(menhir
  (modules Tokens Parser)
  (merge_into Parser)
  (flags --external-tokens Tokens --explain))
