opam-version: "2.0"
version: "0.1"
author: "simon.cruanes.2007@m4x.org"
synopsis: "OCaml bindings for trustee"
maintainer: "simon.cruanes.2007@m4x.org"
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "build" "@doc" "-p" name "-j" jobs] {with-doc}
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
# TODO: add dependency on cargo?
depends: [
  "ocaml" { >= "4.06.0" }
  "dune" {>= "1.3.0" }
  "odoc" {with-doc}
  "conf-rust-2018" {build}
]
tags: [ "trustee" "HOL" "kernel_of_trust" ]
homepage: "https://github.com/c-cube/trustee/"
dev-repo: "git+https://github.com/c-cube/trustee.git"
bug-reports: "https://github.com/c-cube/trustee/issues"
