
(rule
  (targets t1.trll.out)
  (deps (:repl ../tools/vm_repl.exe) (:file t1.trll))
  (package trustee)
  (action (with-stdout-to %{targets} (with-stdin-from %{file} (run %{repl} --raw)))))

(rule
  (alias runtest)
  (package trustee)
  (action (diff t1.trll.expected t1.trll.out)))

(rule
  (targets t2.trll.out)
  (deps (:repl ../tools/vm_repl.exe) (:file t2.trll))
  (package trustee)
  (action (with-stdout-to %{targets} (with-stdin-from %{file} (run %{repl} --raw)))))

(rule
  (alias runtest)
  (package trustee)
  (action (diff t2.trll.expected t2.trll.out)))
