
(rule
  (targets t1.trll.out)
  (deps (:c ../tools/vm_check.exe) (:file t1.trll))
  (package trustee)
  (action (with-stdout-to %{targets} (run %{c} %{file}))))

(rule
  (alias runtest)
  (package trustee)
  (action (diff t1.trll.expected t1.trll.out)))

(rule
  (targets t2.trll.out)
  (deps (:c ../tools/vm_check.exe) (:file t2.trll))
  (package trustee)
  (action (with-stdout-to %{targets} (run %{c} %{file}))))

(rule
  (alias runtest)
  (package trustee)
  (action (diff t2.trll.expected t2.trll.out)))
