
(executable
  (name trustee_ot)
  (flags :standard -warn-error -a+8 -open Trustee_core.Sigs)
  (libraries containers unix trustee.core trustee-opentheory
             tiny_httpd))

(rule
  (targets static.ml)
  (deps (:css main.css))
  (action (run tiny-httpd-vfs-pack
               --file=main.css,%{css}
               --url=bootstrap.css,https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css
               -o %{targets})))
