(executable
 (name trustee_ot)
 (flags :standard -warn-error -a+8 -open Trustee_core.Sigs)
 (libraries
  containers
  unix
  trustee.core
  trace-tef
  logs
  trustee-opentheory
  tiny_httpd
  tiny_httpd.prometheus
  tiny_httpd_camlzip))

(rule
 (targets static.ml)
 (deps
  (:css main.css)
  (:js tooltip.js))
 (action
  (run
   tiny-httpd-vfs-pack
   --file=main.css,%{css}
   --file=tooltip.js,%{js}
   --url=bootstrap.css,https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css
   --url=htmx.js,https://unpkg.com/htmx.org@1.7.0/dist/htmx.min.js
   -o
   %{targets})))
