(rule
 (targets basic_hol.parsed)
 (deps basic_hol.trustee)
 (action
  (with-stdout-to
   %{targets}
   (run ../../../src/tools/trustee_bin.exe cat %{deps}))))

(rule
 (alias runtest)
 (action
  (diff basic_hol.parsed.expected basic_hol.parsed)))

(rule
 (targets bad.parsed)
 (deps bad.trustee)
 (action
  (with-stdout-to
   %{targets}
   (run ../../../src/tools/trustee_bin.exe cat %{deps}))))

(rule
 (alias runtest)
 (action
  (diff bad.parsed.expected bad.parsed)))
